--- a/bot/templates/pokaz.html
+++ b/bot/templates/pokaz.html
@@ -68,13 +68,16 @@
         }
 
         .game-type-label {
-            left: 50%;
-            transform: translateX(-50%);
             color: white;
             font-size: 24px;
             font-weight: bold;
             z-index: 10;
             white-space: nowrap;
+            display: flex;
+            align-items: center;
+            justify-content: center;
+            width: 100%;
+            text-align: center;
         }
 
         .turn-label {
