--- a/bot/templates/hint_viewer.html
+++ b/bot/templates/hint_viewer.html
@@ -2401,10 +2401,9 @@
                 const PassHint = (item.cube_hints[0].cubeful_equities || []).find(h => h.action_1 === 'Double' && h.action_2 === 'pass');
                 const noDoubleEq = noDoubleHint && noDoubleHint.eq ? noDoubleHint.eq : null;
                 const PassHintEq = PassHint && PassHint.eq ? PassHint.eq : null;
-                const firstCubeEq = item.cube_hints[0].cubeful_equities && item.cube_hints[0].cubeful_equities.length > 0 ? item.cube_hints[0].cubeful_equities[0].eq : null;
                 (item.cube_hints[0].cubeful_equities || []).forEach((hint, index) => {
                     const eq = hint.eq ? hint.eq.toFixed(3) : '-';
-                    const displayEq = (firstCubeEq !== null && hint.eq !== undefined && index > 0) ? (hint.eq - firstCubeEq).toFixed(3) : eq;
+                    const displayEq = eq;
                     let displayAction = hint.action_1;
                     if (hint.action_2) {
                         displayAction += `, ${hint.action_2}`;
